k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cardmarket-app
  namespace: cardmarket
spec:
  selector:
    app: cardmarket-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
