k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cardmarket-app
spec:
  ingressClassName: nginx
  rules:
    - host: cardmarket.hello
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cardmarket-app
                port:
                  number: 80
